FIXED: expand filter panel on tenant theme to mitigate filter control wrapping.

--- a/framework/html/themes/tenant/table.css
+++ b/framework/html/themes/tenant/table.css
@@ -102,6 +102,7 @@ button {
     -webkit-border-radius: 5px;
     opacity: 0.94;
     filter: alpha(opacity=94);
+    width: 95%;
 }
 
 #neo-table-header-filterrow input[type=text] {
